Use std::mem_fn instead of the deprecated/removed std::mem_fun

std::mem_fun was deprecated in C++11 and removed from
the standard in C++17.

BUG: 439780
NO_CHANGELOG